--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,20 @@
 #container{
     display: flex;
+    width: 960px;
+    height: 720px;
 }
 
 
 #numbersContainer{
     display: flex;
     flex-wrap: wrap;
-    width: 960px;
-    height: 720px;
+    flex-direction: row-reverse;
+    height: 480px;
+    width: 720px;
 }
 
 .number{
     border: 1px solid black;
-    width: 240px;
-    height: 240px;
+    width: 160px;
+    height: 160px;
 }
